Main menu cleaner and menu got a selection arrow.

--- a/Project/Orbs/Orbs.csproj
+++ b/Project/Orbs/Orbs.csproj
@@ -112,6 +112,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Textures\arrowRight.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\Textures\container.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
