--- a/Project/Orbs/Orbs.csproj
+++ b/Project/Orbs/Orbs.csproj
@@ -117,21 +117,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssetManager.cs" />
-    <Compile Include="Character.cs" />
-    <Compile Include="Direction.cs" />
-    <Compile Include="ExploringState.cs" />
-    <Compile Include="State.cs" />
-    <Compile Include="LibraryExtensions.cs" />
-    <Compile Include="Menu.cs" />
-    <Compile Include="MenuItem.cs" />
+    <Compile Include="Managers\AssetManager.cs" />
+    <Compile Include="Exploration\Characters\PlayerCharacter.cs" />
+    <Compile Include="Exploration\Characters\Character.cs" />
+    <Compile Include="Misc\Direction.cs" />
+    <Compile Include="Managers\SettingManager.cs" />
+    <Compile Include="States\ExploringState.cs" />
+    <Compile Include="States\State.cs" />
+    <Compile Include="Misc\LibraryExtensions.cs" />
+    <Compile Include="GUI\Menu.cs" />
+    <Compile Include="GUI\MenuItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MainMenuState.cs" />
-    <Compile Include="SplashScreenState.cs" />
-    <Compile Include="StateManager.cs" />
-    <Compile Include="Tile.cs" />
-    <Compile Include="TileMap.cs" />
+    <Compile Include="States\MainMenuState.cs" />
+    <Compile Include="States\SplashScreenState.cs" />
+    <Compile Include="Managers\StateManager.cs" />
+    <Compile Include="Exploration\Tile.cs" />
+    <Compile Include="Exploration\TileMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -198,6 +200,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>move "$(TargetDir)*.dll" "$(TargetDir)Libs\"</PostBuildEvent>
